# profile.mobile.platform.core.appfw.app-selector

./: CMakeLists.txt  org.tizen.app-selector.xml.in  project.config
include/: conf.h  grid.h  index.h  layout.h  log.h  page.h  popup.h  scroller.h  type.h  util.h
packaging/: org.tizen.app-selector.spec
po/: CMakeLists.txt  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  ky_KG.po  (+41 more)
res/: CMakeLists.txt
res/edje/: CMakeLists.txt  layout.edc  page.edc
src/: grid.c  index.c  layout.c  main.c  page.c  popup.c  scroller.c  util.c
